create a function for launching a responsive  nav menu

--- a/starterOnly/index.html
+++ b/starterOnly/index.html
@@ -13,19 +13,21 @@
   </head>
   <body>
     <div class="topnav" id="myTopnav">
-      <div class="header-logo">
-      <img alt="logo" src="img/Logo.png" width="auto" height="auto" />
-    </div>
+      <div class="box-icon">
+        <div class="header-logo">
+          <img alt="logo" src="img/Logo.png" width="auto" height="auto" />
+        </div>
+        <a href="#" class="icon" >
+          <i class="fa fa-bars"></i>
+        </a>
+      </div>
     <div class="main-navbar">
-      
-      <a href="#" class="active"><span>Accueil</span></a>
-      <a href="#"><span>Détails de l'évènement</span></a>
-      <a href="#"><span>À propos</span></a>
-      <a href="#"><span>Contact</span></a>
-      <a href="#"><span>Évènements passés</span></a>
-      <a href="javascript:void(0);" class="icon" onclick="editNav()">
-        <i class="fa fa-bars"></i>
-      </a>
+      <span class="close-nav close"></span>
+      <a href="#" class="active element"><span>Accueil</span></a>
+      <a href="#" class="element"><span>Détails de l'évènement</span></a>
+      <a href="#" class="element"><span>À propos</span></a>
+      <a href="#" class="element"><span>Contact</span></a>
+      <a href="#" class="element"><span>Évènements passés</span></a>
     </div>
     </div>
   </div>
@@ -54,7 +56,7 @@
 
       <div class="bground">
         <div class="content">
-          <span class="close"></span>
+          <span class="close-modal close"></span>
           <div class="modal-body">
             <form
               name="reserve"
