--- a/starterOnly/index.html
+++ b/starterOnly/index.html
@@ -2,19 +2,18 @@
 <html lang="en">
 
 <head>
-  <meta charset="utf-8" />
+  <meta charset="utf-8"/>
   <title>Reservation</title>
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <link rel="stylesheet" href="css/modal.css" />
+  <meta name="viewport" content="width=device-width,initial-scale=1"/>
+  <link rel="stylesheet" href="css/modal.css"/>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link href="https://fonts.googleapis.com/css?family=DM+Sans" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css?family=DM+Sans" rel="stylesheet"/>
 </head>
-
 <body>
   <div class="topnav" id="myTopnav">
     <div class="box-icon">
       <div class="header-logo">
-        <img alt="logo" src="img/Logo.png" width="auto" height="auto" />
+        <img  src="img/Logo.png" alt="logo"/>
       </div>
       <a href="#" class="icon">
         <i class="fa fa-bars"></i>
@@ -30,7 +29,6 @@
         <a href="#" class="element"><span>Évènements passés</span></a>
       </div>
     </div>
-  </div>
   </div>
   <main>
     <div class="hero-section">
@@ -48,7 +46,7 @@
         </button>
       </div>
       <div class="hero-img">
-        <img src="img/bg_img.jpg" alt="image d'une femme tenant une manette de jeux " />
+        <img src="img/bg_img.jpg" alt="image d'une femme tenant une manette de jeux"/>
       </div>
       <button class="btn-signup modal-btn">
         je m'inscris
@@ -59,34 +57,34 @@
       <div class="content">
         <span class="close-modal close"></span>
         <div class="modal-body">
-          <form name="reserve" action="index.html" method="get" >
+          <form name="reserve" action="index.html" method="get">
             <div class="formData">
-              <label>Prénom</label><br>
-              <input class="text-control" type="text" id="first" name="first" /><br>
+              <label for="first">Prénom</label><br>
+              <input class="text-control" type="text" id="first" name="first"/><br>
               <div class="error"></div>
             </div>
             <div class="formData ">
-              <label>Nom</label><br>
-              <input class="text-control" type="text" id="last" name="last"  /><br>
+              <label for="last">Nom</label><br>
+              <input class="text-control" type="text" id="last" name="last"/><br>
               <div class="error"></div>
             </div>
             <div class="formData">
-              <label>E-mail</label><br>
-              <input class="text-control" type="email" id="email" name="email"  /><br>
+              <label for="email">E-mail</label><br>
+              <input class="text-control" type="email" id="email" name="email"/><br>
               <div class="error"></div>
             </div>
             <div class="formData">
-              <label>Date de naissance</label><br>
-              <input class="text-control" type="date" id="birthdate" name="birthdate"  /><br>
+              <label for="birthdate">Date de naissance</label><br>
+              <input class="text-control" type="text" id="birthdate" name="birthdate"/><br>
               <div class="error"></div>
             </div>
             <div class="formData ">
-              <label>À combien de tournois GameOn avez-vous déjà participé ?</label><br>
-              <input type="number" class="text-control" id="quantity" name="quantity" />
+              <label for="quantity">À combien de tournois GameOn avez-vous déjà participé ?</label><br>
+              <input type="number" class="text-control" id="quantity" name="quantity"/>
               <div class="error"></div>
             </div>
-            <p class="text-label">A quel tournoi souhaitez-vous participer cette année ?</p>
-            <div class="formData formChekbox">
+            <p class="text-label">A quel tournoi souhaitez-vous participer cette année?</p>
+            <div class="formData radios">
               <input class="checkbox-input" type="radio" id="location1" name="location" value="New York"/>
               <label class="checkbox-label" for="location1">
                 <span class="checkbox-icon"></span>
@@ -114,7 +112,7 @@
               <div class="error"></div>
             </div>
             <div class="formData">
-              <input class="checkbox-input" type="checkbox" id="checkbox1" />
+              <input class="checkbox-input" type="checkbox" id="checkbox1"/>
               <label class="checkbox2-label" for="checkbox1" >
                 <span class="checkbox-icon"></span>
                 J'ai lu et j'accepte les conditions d'utilisation.
@@ -129,7 +127,7 @@
               <div class="error"></div>
               <br>
             </div>
-            <input class="btn-submit" type="submit" class="button" value="C'est parti"/>
+            <input class="btn-submit button" type="submit"  value="C'est parti"/>
           </form>
         </div>
       </div>
